<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_ubicacion">

    <fragment
        android:id="@+id/nav_ubicacion"
        android:name="com.example.trabajopracticoinmobiliaria.ui.Ubicacion.UbicacionFragment"
        android:label="@string/menu_ubicacion"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.trabajopracticoinmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.trabajopracticoinmobiliaria.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleFragment"
            app:destination="@id/detalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleFragment"
        android:name="com.example.trabajopracticoinmobiliaria.ui.inmuebles.detalle.DetalleFragment"
        android:label="Detalle Inmueble"
        tools:layout="@layout/fragment_detalle" >
        <action
            android:id="@+id/action_detalleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.trabajopracticoinmobiliaria.ui.inquilinos.InquilinosFragment"
        android:label="Inmuebles Alquilados" >
        <action
            android:id="@+id/action_nav_inquilinos_to_locatarioFragment"
            app:destination="@id/locatarioFragment" />
    </fragment>
    <fragment
        android:id="@+id/locatarioFragment"
        android:name="com.example.trabajopracticoinmobiliaria.ui.inquilinos.inquilino.locatarioFragment"
        android:label="Inquilino"
        tools:layout="@layout/fragment_locatario" >
        <action
            android:id="@+id/action_locatarioFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.trabajopracticoinmobiliaria.ui.contratos.ContratosFragment"
        android:label="Contratos"
        tools:layout="@layout/fragment_contratos" />
</navigation>